@@ -1,4 +1,6 @@
 ------------------- Upcoming version 1.3 -----------------------------
+- Use Process Manager Interface (PMI) to get fine-granular information
+  about the system topology on Cray machines.
 
 - Changed paradigm selection in the instrumenter to match the selection
   options in the config tool. Thus, introduced --mpp=<paradigm> and
